<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="367dp"
        android:layout_height="497dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iam"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.068" />

        <Button
            android:id="@+id/customer_bt"
            android:layout_width="146dp"
            android:layout_height="47dp"
            android:layout_marginTop="76dp"
            android:text="@string/customer"
            app:layout_constraintEnd_toStartOf="@+id/driver_bt"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/driver_bt"
            android:layout_width="143dp"
            android:layout_height="46dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="24dp"
            android:text="@string/driver"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_register_text"
            android:layout_width="315dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/pw_register_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.965" />

        <EditText
            android:id="@+id/retype_pw_register_text"
            android:layout_width="315dp"
            android:layout_height="46dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/retype_password"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/phone_num_register_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/pw_register_text"
            android:layout_width="315dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/retype_pw_register_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/phone_num_register_text"
            android:layout_width="315dp"
            android:layout_height="46dp"
            android:layout_marginBottom="108dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/next_register_bt"
            android:layout_width="115dp"
            android:layout_height="46dp"
            android:layout_marginBottom="16dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.904"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>