<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgot_pw">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="319dp"
        android:layout_height="385dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_Name"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="46dp"
            android:layout_marginTop="63dp"
            android:layout_marginEnd="44dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textAlignment="viewStart" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="48dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="44dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="textPersonName"
            android:textAlignment="viewStart" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="205dp"
            android:layout_marginEnd="41dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/reset"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="51dp"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="70dp"
            android:text="@string/reset_password" />

    </RelativeLayout>

    <TextView
        android:id="@+id/forgot_text"
        android:layout_width="234dp"
        android:layout_height="57dp"
        android:text="@string/input_these_info_to"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808" />
</androidx.constraintlayout.widget.ConstraintLayout>