<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reset_password">

    <RelativeLayout
        android:layout_width="299dp"
        android:layout_height="374dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reset_pass"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="38dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textAlignment="viewStart" />

        <EditText
            android:id="@+id/retype_pass_reset"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="157dp"
            android:ems="10"
            android:hint="@string/retype_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/update"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="57dp"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="82dp"
            android:text="@string/update" />

        <TextView
            android:id="@+id/text_resetpass"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="43dp"
            android:text="@string/input_new_pass"
            android:textAlignment="center"
            android:textSize="24sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>